# TrueBrief

./: .claudeignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  HOW_TO_RUN.md  README.md  TRUEBRIEF_CONTEXT.md  config.py  debug_atomizer.py  debug_imports.py  debug_pipeline.py  debug_qdrant.py  dev.ps1  engine.py  metrics.py  onboarding.py  pipeline_output.txt  preview-chapters.html  preview-concepts.html  preview-design.html  preview-hybrid.html  pyproject.toml  pyrightconfig.json  railway.beat.toml  railway.toml  railway.worker.toml  requirements.txt  run_engine.bat  run_engine_test.py  setup.py  topics.json  truebrief_design.html  truebrief_frontend_spec.md  utils.py
.ai/: BOOT.md
.claude/: settings.json  skills.md
config/: routing_rules.yaml  rss_feeds.yaml  settings.py
data/: mock_data.json  simulated_news.txt
docs/: OPERATIONS.md  PRE_DEPLOYMENT_PLAN.md  T.html  ai_rules.md  architecture.md  execution_plan.md  implementation_plan.md  manifesto.md  roadmap.md  testing.md
frontend/: .dockerignore  CLAUDE.md  Dockerfile  package-lock.json  package.json  tsconfig.json
reports/: audit_iran_20260605_143216.md  isreal_gemini_and_gpt.md  preview-briefing.html  preview-story-native.html  v2-app.html  v2-new-topic.html  v3-briefing.html
scripts/: audit_topic.py  generate_partial_results.py  inspect_run.py  phase2_master_test.py  plan_packer.py  preflight.py  quality_benchmark.py  railway_deploy.ps1  run_pipeline.py  smoke_scan.py  start-local.ps1  start_beat.py  start_worker.py  stop-local.ps1  test_ayr.py  test_connections.py  test_story_nodes.py  (+1 more)
(+307 files in other folders)
