[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truebrief"
version = "2.0.0"
description = "A noise-free news intelligence platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["truebrief*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
